# OeasyMidSDK

./: README.md
OeasyMidSDK/: .CMakeLists.txt.swp  CMakeLists.txt
OeasyMidSDK/demo/oeasysdktest/: oeasysdktest.sln
OeasyMidSDK/demo/oeasysdktest/oeasysdktest/: main.cpp  oeasysdktest.vcxproj
OeasyMidSDK/include/: OeasyMidDefines.h  OeasyMidSdk.h
OeasyMidSDK/libs/linux/HikVision/include/: DecodeCardSdk.h  HCNetSDK.h  LinuxPlayM4.h
OeasyMidSDK/libs/linux/log/: liblog4cpp.so.5
OeasyMidSDK/libs/win32/DaHua/include/: dhconfigsdk.h  dhnetsdk.h
OeasyMidSDK/libs/win32/HikVision/include/: DataType.h  HCNetSDK.h  PlayM4.h  plaympeg4.h
OeasyMidSDK/libs/win32/HikVision/libs/: PlayCtrl.lib
OeasyMidSDK/libs/win32/HikVision/libs/HCNetSDKCom/: HCPreview.lib
OeasyMidSDK/libs/win32/jsoncpp/debug/: json_vc71_libmtd.lib
OeasyMidSDK/libs/win32/jsoncpp/include/json/: reader.h
OeasyMidSDK/libs/win32/jsoncpp/release/: json_vc71_libmt.lib
OeasyMidSDK/libs/win32/log/release/: log4cpp.lib
OeasyMidSDK/src/: OeasyMidSdk.cpp
OeasyMidSDK/src/common/: ApiImpl.cpp  ApiImpl.h  HandleManager.cpp  HandleManager.h
OeasyMidSDK/src/device/: devicefactory.cpp  devicefactory.h  idevice.h
OeasyMidSDK/src/device/alarmhost/: alarmhostdefine.h  ialarmhost.h
OeasyMidSDK/src/device/alarmhost/hikvision/: hkalarmhost.cpp  hkalarmhost.h
OeasyMidSDK/src/device/camera/: cameradefine.h  icamera.h
OeasyMidSDK/src/device/camera/dahua/: dhcamera.cpp  dhcamera.h
OeasyMidSDK/src/device/camera/hikvision/: hkcamera.cpp  hkcamera.h
OeasyMidSDK/src/device/intercom/: iintercom.h  intercomdefine.h
OeasyMidSDK/src/device/intercom/oeasyintercom/: oeasyintercom.cpp  oeasyintercom.h
OeasyMidSDK/src/platform/: BaseType.h
OeasyMidSDK/src/platform/socket/: OeasySocket.cpp
OeasyMidSDK/src/platform/thread/: AutoLock.cpp  AutoLock.h  MsgThread.hpp  Thread.cpp  Thread.h
OeasyMidSDK/src/platform/tick/: Tick.cpp  Tick.h
OeasyMidSDK/src/tools/json/: oeasyjson.cpp  oeasyjson.h
OeasyMidSDK/src/tools/log/: log4cpp.cpp  log4cpp.h  oeasylog.cpp  oeasylog.h
OeasyMidSDK/src/tools/socket/: OeasySocket.cpp  OeasySocket.h
